--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Inventory</string>
     <string name="action_settings">Settings</string>
     <string name="insert_dummy">Insert Dummy</string>
+    <string name="new_product_activity_title">New Product</string>
 </resources>
