--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="insert_dummy">Insert Dummy</string>
     <string name="new_product_activity_title">New Product</string>
+    <string name="update_product_activity_title">Update Product</string>
 </resources>
